Sync all content

--- a/content/resources/14-33s05-th.md
+++ b/content/resources/14-33s05-th.md
@@ -1,13 +1,15 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/14-33-economics-research-and-communication-spring-2005/8ec3cf038880fd4159a657e14d3f64db_14-33s05-th.jpg
+file: /media/courses/14-33-economics-research-and-communication-spring-2005/8ec3cf038880fd4159a657e14d3f64db_14-33s05-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: United States Department of Commerce research library. (Image is taken
     from the [Department of Commerce Web site](http://www.commerce.gov/).)
   credit: ''
   image-alt: Photo of United States Department of Commerce research library.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 14-33s05-th.jpg
 uid: 8ec3cf03-8880-fd41-59a6-57e14d3f64db
