Sync all content

--- a/content/resources/14-33s05-th.md
+++ b/content/resources/14-33s05-th.md
@@ -9,6 +9,7 @@ image_metadata:
   credit: ''
   image-alt: Photo of United States Department of Commerce research library.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 14-33s05-th.jpg
