--- a/content/resources/14-33s05.md
+++ b/content/resources/14-33s05.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Photo of United States Department of Commerce research library.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 14-33s05.jpg
 uid: 49955100-8361-9437-6fa2-796a5820e9c3
 ---
 United States Department of Commerce research library. (Image is taken from the Department of Commerce Web site.)
-
