Sync all content

--- a/content/resources/14-33s05-th.md
+++ b/content/resources/14-33s05-th.md
@@ -1,7 +1,8 @@
 ---
 content_type: resource
 description: ''
-file: /courses/14-33-economics-research-and-communication-spring-2005/8ec3cf038880fd4159a657e14d3f64db_14-33s05-th.jpg
+file: /ol-ocw-studio-app/courses/14-33-economics-research-and-communication-spring-2005/8ec3cf038880fd4159a657e14d3f64db_14-33s05-th.jpg
+file_size: 8446
 file_type: image/jpeg
 image_metadata:
   caption: United States Department of Commerce research library. (Image is taken
