--- a/content/resources/14-33s05.md
+++ b/content/resources/14-33s05.md
@@ -2,7 +2,8 @@
 content_type: resource
 description: United States Department of Commerce research library. (Image is taken
   from the Department of Commerce Web site.)
-file: /courses/14-33-economics-research-and-communication-spring-2005/49955100836194376fa2796a5820e9c3_14-33s05.jpg
+file: /ol-ocw-studio-app/courses/14-33-economics-research-and-communication-spring-2005/49955100836194376fa2796a5820e9c3_14-33s05.jpg
+file_size: 98914
 file_type: image/jpeg
 image_metadata:
   caption: United States Department of Commerce research library. (Image is taken
