Sync all content

--- a/content/resources/14-33s05-th.md
+++ b/content/resources/14-33s05-th.md
@@ -6,7 +6,8 @@ file_size: 8446
 file_type: image/jpeg
 image_metadata:
   caption: United States Department of Commerce research library. (Image is taken
-    from the [Department of Commerce Web site](http://www.commerce.gov/).)
+    from the {{% resource_link "6b2ea1ce-20d3-4d70-b707-d62dbe8acfb4" "Department
+    of Commerce Web site" %}}.)
   credit: ''
   image-alt: Photo of United States Department of Commerce research library.
 learning_resource_types: []
